--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -96,7 +96,7 @@
     <button onclick="startPhoto()">拍照</button>
     <button>人脸识别结束</button>
   </div>
-  <video id="video" src=""></video>
+  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
   <img id="previewImg" src="" alt="" sizes="" srcset="">
 </body>
 </html>
