--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -96,7 +96,11 @@
     <button onclick="startPhoto()">拍照</button>
     <button>人脸识别结束</button>
   </div>
-  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
+  <h3>相机摄像</h3>
+  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4" controls></video>
+  <h3>拍照预览</h3>
   <img id="previewImg" src="" alt="" sizes="" srcset="">
+  <h3>人脸识别录像播放</h3>
+  <video id="videoRecord" src="https://www.runoob.com/try/demo_source/movie.mp4" controls></video>
 </body>
 </html>
