--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>getUserMedia demo</title>
   <style>
     body {
       margin: 0;
@@ -24,8 +24,8 @@
   </style>
 </head>
 <body>
-  <h2>getUserMedia demo</h2>
   <script>
+    let stream = ''
     function startPhoto() {
       console.log('start')
       getUserMedia()
@@ -70,7 +70,7 @@
           }
         }
 
-       const stream = await navigator.mediaDevices.getUserMedia(constraints)
+        stream = await navigator.mediaDevices.getUserMedia(constraints)
         /* 使用这个stream stream */
         var video = document.querySelector('video');
         // 旧的浏览器可能没有srcObject
@@ -97,10 +97,10 @@
     <button>人脸识别结束</button>
   </div>
   <h3>相机摄像</h3>
-  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4" controls></video>
+  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
   <h3>拍照预览</h3>
   <img id="previewImg" src="" alt="" sizes="" srcset="">
   <h3>人脸识别录像播放</h3>
-  <video id="videoRecord" src="https://www.runoob.com/try/demo_source/movie.mp4" controls></video>
+  <video id="videoRecord" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
 </body>
 </html>
