--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -28,6 +28,8 @@
     let stream = ''
     function startPhoto() {
       console.log('start')
+      var video = document.querySelector('video');
+      video.play()
       getUserMedia()
     }
 
@@ -89,15 +91,34 @@
       }
     }
 
+    //拍照
+    function takePhoto() {
+      const tracks = stream.getTracks();
+      // 关闭摄像头和音频
+      tracks.forEach(track => {
+        track.stop();
+      });
+    }
+
   </script>
   <div class="btn-container">
     <button onclick="startPhoto()">开始拍照</button>
     <button>开始人脸识别</button>
-    <button onclick="startPhoto()">拍照</button>
+    <button onclick="takePhoto()">拍照</button>
     <button>人脸识别结束</button>
   </div>
   <h3>相机摄像</h3>
-  <video id="video" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
+  <video
+    id="video"
+    src="https://www.runoob.com/try/demo_source/movie.mp4"
+    muted=true
+    height='300px'
+    webkit-playsinline="true"
+    x5-playsinline="true"
+    playsInline =true
+    x-webkit-airplay="true"
+  ></video>
+  <canvas id="canvas_video"></canvas>
   <h3>拍照预览</h3>
   <img id="previewImg" src="" alt="" sizes="" srcset="">
   <h3>人脸识别录像播放</h3>
