--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -139,5 +139,7 @@
   <h3>人脸识别录像播放</h3>
   <video id="videoRecord" src="https://www.runoob.com/try/demo_source/movie.mp4"></video>
   <canvas id="canvas"></canvas>
+
+  <input class="card_input" type="file" accept="image/*" capture="camera" />
 </body>
 </html>
