--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -41,11 +41,15 @@
       //}
       //视频流镜像问题
       const constraints = { 
-        audio: false, 
-        video: {
-          deviceId: 'default',
-          facingMode:'user',
-        }
+        audio: false,
+                video: {
+                    sourceId: 'default',
+                    facingMode:  { exact: "user" } 
+                }
+        //video: {
+        //  deviceId: 'default',
+        //  facingMode:'user',
+        //}
         //video: { facingMode: "user" } 
         //video: {
         //  sourceId: 'default',
