--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -224,12 +224,14 @@
   <h3>拍照预览</h3>
   <img id="previewImg" src="" alt="" sizes="" srcset="">
   <h3>人脸识别录像播放</h3>
+
+  <h3>input拍照</h3>
+  <input class="card_input" type="file" accept="image/*" capture="camera">
+
+  <h3>input人脸识别</h3>
+  <input class="card_input" type="file" accept="" capture="user" />
   <video id="videoRecord" src="" controls></video>
   <canvas id="canvas"></canvas>
-
-  <input class="card_input" type="file" accept="image/*" capture="camera" />
-
-  <input class="card_input" type="file" accept="" capture="user" />
 
   <a href="" id="downLoadLink">downLoadLink</a>
 </body>
