--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -229,7 +229,8 @@
   <input class="card_input" type="file" accept="image/*" capture="camera">
 
   <h3>input人脸识别</h3>
-  <input class="card_input" type="file" accept="" capture="user" />
+ <input class="card_input" type="file"  accept="video/*" capture="user" />
+  <!--<input class="card_input" type="file" accept="" capture="user" />-->
   <video id="videoRecord" src="" controls></video>
   <canvas id="canvas"></canvas>
 
