--- a/getUserMedia/index.html
+++ b/getUserMedia/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>getUserMedia demo</title>
+  <script src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
   <style>
     body {
       margin: 0;
@@ -234,6 +235,24 @@
   <video id="videoRecord" src="" controls></video>
   <canvas id="canvas"></canvas>
 
+
+
+<script>
+  function openC() {
+    console.log('sds')
+    wx.chooseImage({
+      count: 1, // 默认9
+      sizeType: ['original', 'compressed'], // 可以指定是原图还是压缩图，默认二者都有
+      sourceType: ['album', 'camera'], // 可以指定来源是相册还是相机，默认二者都有
+      success: function (res) {
+      var localIds = res.localIds; // 返回选定照片的本地ID列表，localId可以作为img标签的src属性显示图片
+      }
+    });
+  }
+</script>
+  <button onclick="openC()">open camera</button>
+  <br>
   <a href="" id="downLoadLink">downLoadLink</a>
+
 </body>
 </html>
