--- a/siteMonitor/index.html
+++ b/siteMonitor/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script src="/static/js/xlsx.full.min.js"></script>
-    <script type="module" crossorigin src="/assets/index.a6821ee8.js"></script>
-    <link rel="stylesheet" href="/assets/index.06d14ce2.css">
+    <script src="./static/js/xlsx.full.min.js"></script>
+    <script type="module" crossorigin src="./assets/index.a6821ee8.js"></script>
+    <link rel="stylesheet" href="./assets/index.06d14ce2.css">
   </head>
   <body>
     <div id="app"></div>
