--- a/photo-sphere-viewer/index.html
+++ b/photo-sphere-viewer/index.html
@@ -16,6 +16,14 @@
     <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uevent@2/browser.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.min.js"></script>
+    <style>
+      @media screen and (orientation: portrait) {
+        #viewer {
+          transform: rotate(90deg);
+        }
+      }
+
+    </style>
   </head>
   <body>
     <!-- the viewer container must have a defined size -->
