--- a/krpanoSimple/index.html
+++ b/krpanoSimple/index.html
@@ -71,8 +71,8 @@
         },
       });
 
-      function krpanoReady(krpano) {
-        // var krpano = document.getElementById("krpanoSWFObject");
+      function krpanoReady() {
+        var krpano = document.getElementById("krpanoSWFObject");
         console.log("krpano", krpano);
         // setTimeout(() => {
         // 	krpano.call("loadscene('scene2')");
