--- a/dryRice/index.html
+++ b/dryRice/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>干饭人</h2>
-    <img src="./rice.png" alt="" srcset="">
+    <img src="./static/rice.png" alt="" srcset="">
 </body>
 </html>
