--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
   test demo
+  <script>
+
+navigator.clipboard.readText().then(
+        clipText => {
+            console.log('clipText:', clipText)
+        });
+  </script>
 </body>
 </html>
