--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,8 @@
     <script>
         setTimeout(() => {
             console.log('change title')
-            document.title = ' '
+            // document.title = 
+            document.title='\u200E'
         }, 3000);
     </script>
 </body>
